# 8homework

./: CMakeLists.txt  main.cpp
include/: multi_thread_word_counter.h
src/: multi_thread_word_counter.cpp
